--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 					</style>
 					<div id="mc_embed_signup">
-					<form action="http://github.us9.list-manage.com/subscribe/post?u=a5e4f644fdb6e58a48673fb3f&amp;id=2ca9731985" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<form action="//soniclifemedia.us9.list-manage.com/subscribe/post?u=013fe91ff7c9fb00c6c091a78&amp;id=5c384fc1d7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 					    <div id="mc_embed_signup_scroll">
 						<label for="mce-EMAIL">Sign Up and we will tell you when we launch</label>
 						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
