Landing + Mailing list description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="intro-message">
 
 			<h2>
-			Hello, World!
+			Welcome!
 			</h2> 
 				<p class="fancy">
 				Welcome to my personal portfolio page. Here you'll find a sample of my production work. </p>
@@ -54,7 +54,7 @@
 					<div id="mc_embed_signup">
 					<form action="//soniclifemedia.us9.list-manage.com/subscribe/post?u=013fe91ff7c9fb00c6c091a78&amp;id=5c384fc1d7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 					    <div id="mc_embed_signup_scroll">
-						<label for="mce-EMAIL">Sign up today to be on the list!</label>
+						<label for="mce-EMAIL">Sign up today to know when we launch our full website!</label>
 						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a5e4f644fdb6e58a48673fb3f_2ca9731985" tabindex="-1" value=""></div>
